--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "awsdemojs",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
+    "@material-ui/core": "^4.9.8",
+    "@material-ui/icons": "^4.9.1",
     "@reduxjs/toolkit": "^1.2.5",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -15,7 +18,8 @@
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
-    "react-tabs": "^3.1.0"
+    "react-tabs": "^3.1.0",
+    "recharts": "^1.8.5"
   },
   "scripts": {
     "start": "react-scripts start",
