--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "react-tabs": "^3.1.0",
+    "react-tackle-box": "^2.1.0",
     "recharts": "^1.8.5"
   },
   "scripts": {
