--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/jest": "^25.2.1",
+    "@types/node": "^13.11.0",
+    "@types/react": "^16.9.32",
+    "@types/react-big-calendar": "^0.24.0",
+    "@types/react-dom": "^16.9.6",
     "moment": "^2.24.0",
     "node-sass": "^4.13.1",
     "react": "^16.13.1",
@@ -22,7 +27,8 @@
     "react-scripts": "3.4.1",
     "react-tabs": "^3.1.0",
     "react-tackle-box": "^2.1.0",
-    "recharts": "^1.8.5"
+    "recharts": "^1.8.5",
+    "typescript": "^3.8.3"
   },
   "scripts": {
     "start": "react-scripts start",
