--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@types/react": "^16.9.32",
     "@types/react-big-calendar": "^0.24.0",
     "@types/react-dom": "^16.9.6",
+    "@types/react-redux": "^7.1.7",
+    "@types/react-router-dom": "^5.1.3",
     "moment": "^2.24.0",
     "node-sass": "^4.13.1",
     "react": "^16.13.1",
