--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "node-sass": "^4.13.1",
     "react": "^16.13.1",
     "react-big-calendar": "^0.24.1",
+    "react-color": "^2.18.0",
     "react-dnd": "^10.0.2",
     "react-dnd-html5-backend": "^10.0.2",
     "react-dom": "^16.13.1",
